objects/team__c.object
<CustomObject>
    <fields>
        <fullName>bowlers_percent_in_the_team__c</fullName>
        <label>bowlers percent in the team</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>budget_for_the_team__c</fullName>
        <label>budget for the team</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>numberofplayers__c</fullName>
        <label>numberofplayers</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vehiclelookup__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>vehicle</label>
        <referenceTo>vehicle__c</referenceTo>
        <relationshipLabel>teams</relationshipLabel>
        <relationshipName>teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>team</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>team Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>